--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,9 @@ org.alloytools.alloy.application/src/main/java/edu/mit/csail/sdg/alloy4compiler/
 # Eclipse classpath and project files
 .classpath
 .project
+
+# Gurobi
+gurobi.log
+*.lp
+*.mps
+
