added first case study as a kodkod problem, because the bounds from the paper are not specifiable in alloy, without extra propositional variables. for some reason, manually defining the kodkod problem is breaking the resugarer. will fix, then add pmaxsat objectives in smt2 directly.

--- a/.gitignore
+++ b/.gitignore
@@ -44,8 +44,11 @@ org.alloytools.alloy.application/src/main/java/edu/mit/csail/sdg/alloy4compiler/
 .classpath
 .project
 
-# Gurobi
+# AMALGAM
 gurobi.log
 *.lp
 *.mps
+__pycache__/
+*.pyc
+*.class
 
